# sysmind

./: README.md  dev-requirements.txt  pyproject.toml  requirements.txt
sysmind/: __init__.py  logging.py
sysmind/core/: __init__.py  linux.py  os.py
sysmind/core/sysctl/: __init__.py
tests/: __init__.py
